apps/prometheus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.stadthagen.dev`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
  tls:
    secretName: prometheus-tls
